Layout updates. Added FontAwesome. WIP for height calculations based on page height to include fix for certain page height cutting off images.

--- a/base-react/src/App.css
+++ b/base-react/src/App.css
@@ -145,7 +145,6 @@
 
 .object-6 {
     margin-top: 80rem;
-    background: purple;
 }
 
 .object-4 {
